[package]
name = "emenu"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
atty = "0.2.14"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.31"
font-kit = "0.14.2"
nucleo = "0.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[dev-dependencies]
rstest = "0.25.0"
